<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_centerInParent="true"
        android:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/password_container"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_container"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="invisible"
        android:text="@string/login"/>

    <net.newsmth.dirac.widget.Typewriter
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/username_container"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>
