<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:fitsSystemWindows="true">

    <net.newsmth.dirac.widget.SquareImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/background_image_str"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/line2"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/line3"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/controllers"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <LinearLayout
            android:id="@+id/controllers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:visibility="invisible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/startText"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@android:color/white"/>

                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toEndOf="@+id/startText"
                    android:layout_toStartOf="@+id/endText"/>

                <TextView
                    android:id="@+id/endText"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignWithParentIfMissing="true"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <ImageView
                    android:id="@+id/prev"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_prev"
                    android:src="@drawable/ic_skip_previous_white_36dp"/>

                <ImageView
                    android:id="@+id/play_pause"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/play_pause"/>

                <ImageView
                    android:id="@+id/next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_next"
                    android:src="@drawable/ic_skip_next_white_36dp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

</RelativeLayout>
